# Reskilling-for-ai-Part1

./: FEATURE_IDEAS.md  PROJECT_PLAN.md  PROJECT_PLAN_IDEA3.md  README.md
ai-career-navigator/backend/: app.py
ai-career-navigator/backend/data/: resources.json  roles.json
ai-career-navigator/frontend/: index.html  script.js  style.css
ai_insight_generator/: .gitignore  README.md  book_content.json  book_data.db  pyproject.toml
ai_insight_generator/src/: create_embeddings.py  data_parser.py  database.py
ai_insight_generator/src/ai_insight_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_insight_generator/tests/: test_create_embeddings.py  test_data_parser.py  test_database.py
jules-scratch/verification/: verify_career_navigator.py
skillsync-ai/: README.md
skillsync-ai/backend/: .env.example  main.py  requirements.txt
skillsync-ai/backend/app/database/: database.py
skillsync-ai/backend/app/models/: organization.py  user.py
skillsync-ai/backend/app/utils/: config.py
skillsync-ai/docs/: DEVELOPMENT.md
